--- a/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
@@ -48,7 +48,6 @@
                                 </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="onProceedButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5JB-LI-JNG"/>
-                                    <segue destination="YPl-G6-tPp" kind="presentation" id="uX7-UK-MUp"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9k8-8d-eQT" userLabel="Initial Password Text Field">
@@ -84,6 +83,7 @@
                         <outlet property="enterPasswordLabel" destination="Fk7-jF-owG" id="HaP-BM-lLx"/>
                         <outlet property="initialPasswordTextField" destination="9k8-8d-eQT" id="EtE-Be-66A"/>
                         <outlet property="proceedButton" destination="I8c-sf-7NN" id="sbW-op-xND"/>
+                        <segue destination="YPl-G6-tPp" kind="show" identifier="toMainScreen" id="Zv5-VT-twQ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -183,7 +183,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dh4-hd-SjP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2264" y="-393"/>
+            <point key="canvasLocation" x="2309" y="-393"/>
+        </scene>
+        <!--Library View Controller-->
+        <scene sceneID="kic-um-msu">
+            <objects>
+                <viewController id="DO2-dT-Dpf" userLabel="Library View Controller" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5YB-bP-n8j"/>
+                        <viewControllerLayoutGuide type="bottom" id="3iz-QA-BQ5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1su-Vg-eCB">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Gt2-CR-TlR"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XxS-Jv-x2d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2309" y="282"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="dHY-3n-RBM">
@@ -201,7 +220,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ggf-9M-X4d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3009" y="-393"/>
+            <point key="canvasLocation" x="3221" y="-365"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ltF-r8-AbR">
@@ -219,7 +238,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FjL-l1-s6o" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3009" y="-1071"/>
+            <point key="canvasLocation" x="3099" y="-1073"/>
         </scene>
         <!--Library-->
         <scene sceneID="VV6-CX-haO">
@@ -231,60 +250,12 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="kRm-fZ-LBk" kind="relationship" relationship="rootViewController" id="NmY-8X-mm4"/>
+                        <segue destination="DO2-dT-Dpf" kind="relationship" relationship="rootViewController" id="ZqD-9H-Lzf"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vnN-N5-b4j" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1624" y="282"/>
-        </scene>
-        <!--Library-->
-        <scene sceneID="znV-GN-64v">
-            <objects>
-                <viewController id="kRm-fZ-LBk" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="EG9-Qh-fDj"/>
-                        <viewControllerLayoutGuide type="bottom" id="9La-Wv-cy1"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="178-xe-v9K">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Library" id="V7p-9g-3MH"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="I2G-iJ-pA6" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2264" y="282"/>
-        </scene>
-        <!--Settings-->
-        <scene sceneID="Hkb-RC-gLp">
-            <objects>
-                <tableViewController id="gnJ-jc-n0C" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="zml-1n-yJo">
-                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.87843137250000003" green="0.90980392160000001" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="44" id="4IA-zD-6x7">
-                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4IA-zD-6x7" id="1XG-3e-0PS">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="gnJ-jc-n0C" id="fzG-5J-A8P"/>
-                            <outlet property="delegate" destination="gnJ-jc-n0C" id="3Nd-hI-hMW"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Settings" id="Xpv-yd-aIv"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tye-zp-74R" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2264" y="975"/>
         </scene>
         <!--Settings-->
         <scene sceneID="0bw-e2-JC4">
@@ -296,12 +267,31 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="gnJ-jc-n0C" kind="relationship" relationship="rootViewController" id="pHk-NV-N0Q"/>
+                        <segue destination="c6O-sB-1we" kind="relationship" relationship="rootViewController" id="Npu-li-t5f"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H5o-Ne-Kix" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1624" y="975"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="qjS-48-ohZ">
+            <objects>
+                <viewController id="c6O-sB-1we" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3G4-vw-g3A"/>
+                        <viewControllerLayoutGuide type="bottom" id="qA6-VR-mA3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="J8M-dg-wV4">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="xI3-u1-zD5"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kqk-Ls-IG4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2309" y="975"/>
         </scene>
     </scenes>
     <resources>
