--- a/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
+++ b/GroupLockiOS/GroupLock/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -154,7 +155,7 @@
                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="HomeButton"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="GeneralButton"/>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <segue destination="7rm-kT-rrw" kind="show" id="A4I-bD-HTh"/>
@@ -170,7 +171,7 @@
                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="HomeButton"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="GeneralButton"/>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <segue destination="AeK-f2-8gj" kind="show" id="vtb-Se-6Ed"/>
@@ -185,7 +186,7 @@
                             <constraint firstItem="kxM-cd-HTX" firstAttribute="centerX" secondItem="Gqg-VS-QNg" secondAttribute="centerX" id="baZ-E1-d69"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="HomeView"/>
+                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="GeneralView"/>
                         </userDefinedRuntimeAttributes>
                     </view>
                     <navigationItem key="navigationItem" title="GroupLock" id="wEn-rI-AJ1">
@@ -306,7 +307,7 @@
                             <constraint firstItem="Phd-Ux-wLn" firstAttribute="centerX" secondItem="onr-DE-bbm" secondAttribute="centerX" id="ztd-fx-V8Z"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="DirectoryView"/>
+                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="GeneralView"/>
                         </userDefinedRuntimeAttributes>
                     </view>
                     <navigationItem key="navigationItem" title="Library" id="GAm-cg-AX0"/>
@@ -334,18 +335,18 @@
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CMQ-io-mJo" id="PXS-Ch-vZO">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="file.bmp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LO5-ML-5ov">
-                                            <rect key="frame" x="15" y="12" width="59" height="20"/>
+                                            <rect key="frame" x="15" y="12" width="59" height="19.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NSk-7V-N2j">
-                                            <rect key="frame" x="543" y="12" width="42" height="20"/>
+                                            <rect key="frame" x="543.5" y="12" width="41.5" height="19.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
@@ -359,6 +360,7 @@
                                 <connections>
                                     <outlet property="title" destination="LO5-ML-5ov" id="3tC-HJ-oNc"/>
                                     <outlet property="type" destination="NSk-7V-N2j" id="Sdl-Zf-9Kt"/>
+                                    <segue destination="b9w-f5-Uz5" kind="show" identifier="viewFile" id="PPM-6d-aDn"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -381,6 +383,43 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i8x-6Z-CQl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3038" y="282"/>
+        </scene>
+        <!--View File View Controller-->
+        <scene sceneID="QB0-dJ-TCP">
+            <objects>
+                <viewController id="b9w-f5-Uz5" customClass="ViewFileViewController" customModule="GroupLock" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wxP-CY-3gh"/>
+                        <viewControllerLayoutGuide type="bottom" id="ctM-zN-eph"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ht1-GN-nJT">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="AoC-eP-gw4">
+                                <rect key="frame" x="20" y="20" width="560" height="459"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="459" id="So4-k1-sxN"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="AoC-eP-gw4" secondAttribute="trailing" id="BvN-zX-SJl"/>
+                            <constraint firstItem="AoC-eP-gw4" firstAttribute="top" secondItem="wxP-CY-3gh" secondAttribute="bottom" constant="20" id="PFJ-pv-ahe"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="AoC-eP-gw4" secondAttribute="leading" id="as2-9n-BIt"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="string" keyPath="nuiClass" value="GeneralView"/>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="AoC-eP-gw4" id="L1F-Wg-1NJ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aaI-fZ-X4a" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3719" y="282"/>
         </scene>
         <!--Settings-->
         <scene sceneID="0bw-e2-JC4">
